--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-exclude: (^tests/data/|^examples/)
+exclude: (^tests/data/|^examples/|^mmlmtools/tools/imagebind/)
 repos:
   - repo: https://github.com/PyCQA/flake8
     rev: 5.0.4
