--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -12,4 +12,4 @@ formats:
 python:
   install:
     - requirements: requirements/docs.txt
-    - requirements: requirements/readthedocs.txt
+    - requirements: requirements/runtime.txt
