--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,10 +45,11 @@ based_on_style = "pep8"
 blank_line_before_nested_class_or_def = true
 split_before_expression_after_opening_paren = true
 split_penalty_import_names = 0
-SPLIT_PENALTY_AFTER_OPENING_BRACKET = 800
+split_penalty_after_opening_bracket = 800
+column_limit = 100
 
 [tool.isort]
-line_length = 79
+line_length = 100
 multi_line_output = 0
 known_first_party = "agentlego"
 no_lines_before = ["STDLIB", "LOCALFOLDER"]
