Add Gradio interface

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,11 @@ venv.bak/
 
 # generated image, audio or video files.
 generated/
+
+# gradio demo
+examples/gradio/logs/
+examples/gradio/custom_tools/*.py
+examples/gradio/installer_files/
+examples/gradio/generated/
+examples/gradio/agent_config.yml
+examples/gradio/tool_config.yml
